syntax = "proto3";

import "proto/errors.proto";
import "proto/accounts.proto";
import "proto/types.proto";

option go_package = "components/proto";

enum EventType {
    ORAL = 0;
    ROLEPLAY = 1;
    EXAM = 2;
}

message Event {
    string owner = 1;
    string name = 2;
    string description = 3;

    string location = 4;
    EventType type = 5;

    string start = 6;
    string end = 7;
}

message Team {
    string owner = 1;
    string name = 2;
    repeated string members = 3;
}

service GroupingManager {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc List(ListRequest) returns (ListResponse);
    rpc Delete(DeleteRequest) returns (Status);
}

message CreateRequest {
    Credentials credentials = 1;
    GroupingType type = 2;
    oneof grouping {
        Event event = 3;
        Team team = 4;
    }
}

message CreateResponse {
    string id = 1;
    Status status = 2;
}

message ListRequest {
    Credentials credentials = 1;
    GroupingType type = 2;
}

message ListResponse {
    message EventList {
        repeated Event events = 1;
    }
    message TeamList {
        repeated Team teams = 1;
    }
    oneof grouping {
        EventList events = 1;
        TeamList teams = 2;
    }
    Status status = 3;
}

message DeleteRequest {
    string id = 1;
    Credentials credentials = 2;
    GroupingType type = 3;
}
