syntax = "proto3";

option go_package = "components/proto";

message Room {
	string Name = 1;
}

message Event {
	string ID = 1;
}

message Judge {
	string Email = 1;
	string FirstName = 2;
	string LastName = 3;
}

message Student {
	string Email = 1;
	string FirstName = 2;
	string LastName = 3;
}
